--- a/index.html
+++ b/index.html
@@ -6,10 +6,12 @@
   <title>Codeoholics - Where Code Comes Alive</title>
   
   <!-- Bootstrap -->
+  <link rel="stylesheet" href="index.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+  <script src="index.js"></script>
 
   <!-- Font Awesome -->
   <script src="https://kit.fontawesome.com/ac42c3b1f7.js" crossorigin="anonymous"></script>
