--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <div class="col-md-4 mb-4">
           <div class="event-card card-hover-effect" data-tilt>
             <div class="card-glow"></div>
-            <img src="/placeholder.svg?height=200&width=400" class="card-img-top" alt="Hackathon 2025">
+            <img src="hackathon.png" class="card-img-top" alt="Hackathon 2025">
             <div class="card-body">
               <div class="event-date">
                 <span class="date-day">24</span>
@@ -141,7 +141,7 @@
         <div class="col-md-4 mb-4">
           <div class="event-card card-hover-effect" data-tilt>
             <div class="card-glow"></div>
-            <img src="/placeholder.svg?height=200&width=400" class="card-img-top" alt="DSA BootCamp">
+            <img src="" class="card-img-top" alt="DSA BootCamp">
             <div class="card-body">
               <div class="event-date">
                 <span class="date-day">15</span>
@@ -160,7 +160,7 @@
         <div class="col-md-4 mb-4">
           <div class="event-card card-hover-effect" data-tilt>
             <div class="card-glow"></div>
-            <img src="/placeholder.svg?height=200&width=400" class="card-img-top" alt="Codeoholics Summit">
+            <img src="summit.png" class="card-img-top" alt="Codeoholics Summit">
             <div class="card-body">
               <div class="event-date">
                 <span class="date-day">08</span>
