--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         <div class="col-md-4 mb-4">
           <div class="event-card card-hover-effect" data-tilt>
             <div class="card-glow"></div>
-            <img src="" class="card-img-top" alt="DSA BootCamp">
+            <img src="https://media.geeksforgeeks.org/img-practice/prod/courses/1699342871/Web/Content/dsa-bootcamp-thumbnail-old.png" class="card-img-top" alt="DSA BootCamp">
             <div class="card-body">
               <div class="event-date">
                 <span class="date-day">15</span>
